@@ -1391,6 +1391,11 @@ Tue Apr  8 14:03:32 CEST 2003
 	- Added rstrdate function.
 	- Made Informix mode honor environment variable to set dbname to
 	  connect to.
+
+Thu May  1 14:54:41 CEST 2003
+
+	- Enable more Informix shortcuts.
+	- Added option '-i' to parse files included via cpp diretive as well.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
